--- a/src/pages/Home/components/VideoCard.module.css
+++ b/src/pages/Home/components/VideoCard.module.css
@@ -42,7 +42,8 @@
 @media screen and (min-width: 768px) {
   .title {
     -webkit-line-clamp: 2;
-    font-size: 1rem;
+    font-weight: normal;
+    font-size: 0.9rem;
   }
 
   .channel {
