--- a/src/pages/WatchLater/WatchLater.module.css
+++ b/src/pages/WatchLater/WatchLater.module.css
@@ -1,6 +1,7 @@
 .watchLaterContainer {
   width: 95vw;
   margin: 0 auto;
+  padding-bottom: 5rem;
 }
 
 .heading {
@@ -30,5 +31,6 @@
   .watchLaterContainer {
     width: 40vw;
     margin: 2rem auto;
+    padding-bottom: 2rem;
   }
 }
